[project]
name = "ishocon3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.5",
    "gunicorn>=23.0.0",
    "ipython>=8.30.0",
    "pymysql[rsa]>=1.1.1",
    "python-ulid>=3.0.0",
    "sqlalchemy>=2.0.36",
    "pillow>=11.0.0",
    "python-ulid>=3.0.0",
    "python-multipart>=0.0.20",
    "qrcode>=8.0",
    "requests>=2.31.0",
    "urllib3>=2.2.3",
    "uvicorn-worker>=0.2.0",
    "redis>=6.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
